# NiflectSampleHotSwap

./: README.md
.github/workflows/: Linux.yml  Windows.yml
Doc/English/: README.md
Project/: StorageConfig.cmake
Project/App/: CMakeLists.txt
Project/HotSwap/: CMakeLists.txt
Project/Plugin/: CMakeLists.txt
Project/Plugin/Ability/: Shared.cmake
Project/Plugin/AntiCheat/: Shared.cmake
Project/Runtime/: Shared.cmake
Source/App/src/: Main.cpp
Source/HotSwap/: HotSwap.h  Main.cpp
Source/Plugin/AntiCheat/include/: AntiCheat.h  PlayerBehavior.h
Source/Plugin/AntiCheat/src/: AntiCheat.cpp  AntiCheatCommon.h  PlayerBehavior.cpp  PlayerBehavior.h
Source/Runtime/include/: AccessorSetting.h  Actor.h  AntiCheatInterface.h  Component.h  Game.h  RuntimeCommon.h  RuntimeMethodHash.h
Source/Runtime/include/HotSwap/: HotSwap.h  Nata.h  Plugin.h  RunTimeModule.h  RuntimeMethodHash.h  TypeSafeInvocationBestPractice.h
Source/Runtime/src/: Component.h  Game.cpp  PluginManager.h  Runtime.cpp
Source/Runtime/src/HotSwap/: HotSwap.cpp  RunTimeModule.cpp  TypeSafeInvocationBadAlternativeMethodProxy.h  TypeSafeInvocation_BadAlternative_MethodProxy.h
